# cpp_analyzer

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  directory_tree.cpp  directory_tree.h  file_stats.cpp  file_stats.h  html_generator.cpp  html_generator.h  main.cpp
.circleci/: config.yml
example/: Test.json  json_parse_test.js  report_test.html
tests/: 1000_lines.cpp  100_lines.cpp  one_line.h  test_directory_tree.cpp  test_file_stats.cpp  test_integration.cpp  test_performance.cpp  test_unit.cpp
tests/testdir/: large_file.cpp  test-#!@£$%^&*()_+":;'.h
unit_tests/: test_file_stats.cpp
unit_tests/testdir/aaa/: mixed_file.cpp
